--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^19.2.3",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
     "sass": "^1.97.1",
