--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remixicon/react": "^4.8.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
@@ -14,6 +15,7 @@
     "react": "^19.2.3",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^19.2.3",
+    "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
