--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bulma": "^1.0.4",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
+    "nanoid": "^5.1.6",
     "react": "^19.2.3",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^19.2.3",
