--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "sass": "^1.97.2",
     "web-vitals": "^2.1.4"
   },
