--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.3",
     "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.11.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
     "sass": "^1.97.1",
