--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "^7.12.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
     "sass": "^1.97.2",
