--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.3",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^19.2.3",
+    "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^10.0.0",
     "react-router-dom": "^7.11.0",
     "react-router-hash-link": "^2.4.3",
